<resources>
    <string name="app_name">FarHome</string>

    <!--Firebase Authentication-->
    <string name="login_logo_description" translatable="false">FarHome logo</string>
    <string name="login_hint_email" translatable="false">E-mail</string>
    <string name="login_hint_password">Password</string>
    <string name="login_hint_confirm_password">Confirm password</string>
    <string name="login_sign_in">Sign In</string>
    <string name="login_create_account">Create account</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_reset_password">Reset password</string>
    <string name="login_existing_account">Use existing account</string>
    <string name="login_verify_email">Please verify your e-mail!</string>
    <string name="login_loading">Loading…</string>
    <string name="login_empty_field_warning">Empty field!</string>
    <string name="login_passwords_mismatch">Passwords are not the same!</string>
    <string name="login_wrong_email_password">Invalid e-mail/password!</string>
    <string name="login_auth_failed">Authentication failed</string>
    <string name="login_verification_email_sent">Verification e-mail sent to</string>
    <string name="login_reset_password_email_sent">Password reset e-mail sent to</string>
    <string name="login_reset_password_email_failed">Failed to send password reset e-mail!</string>
    <string name="login_verification_email_failed">Failed to send verification e-mail!</string>
    <string name="login_account_exists">Account already exists!</string>
    <string name="login_weak_password">Weak password!</string>
    <string name="login_invalid_email">Account is blocked or does not exist!</string>

    <!--Category Screen-->
    <string name="category_alarm">Alarm</string>
    <string name="category_info">Information</string>
    <string name="category_control">Control</string>
    <string name="category_all_widgets">All widgets</string>
    <string name="alarm_icon_desc" translatable="false">alarm icon</string>
    <string name="info_icon_desc" translatable="false">information icon</string>
    <string name="control_icon_desc" translatable="false">control icon</string>
    <plurals name="category_widgets">
        <item quantity="one">%d widget</item>
        <item quantity="other">%d widgets</item>
    </plurals>

    <!--UI text-->
    <string name="ui_version_text" translatable="false">FarHome v0.4.1-beta</string>
    <string name="ui_ok_text">OK</string>
    <string name="ui_cancel_text">Cancel</string>
    <string name="ui_on_text">ON</string>
    <string name="ui_off_text">OFF</string>
    <string name="ui_retry_text">Retry</string>
    <string name="ui_widget_switch_icon_desc" translatable="false">switch icon</string>
    <string name="ui_widget_button_edit_description">Edit</string>
    <string name="ui_widget_button_delete_description">Delete</string>
    <string name="ui_widget_button_sms_description">Send SMS</string>
    <string name="ui_drawer_header_description">Drawer header</string>
    <string name="ui_about_text">About</string>
    <string name="ui_no_devices_found_text">No devices found</string>
    <string name="ui_delete_confirmation_title">Delete this widget?</string>
    <string name="ui_logout_confirmation_title">Sign out?</string>
    <string name="ui_logout_warning">You can\'t receive notifications from your devices
    when you\'re signed out</string>
    <string name="ui_delete_confirmation_text">This widget will be deleted permanently</string>
    <string name="ui_loading_user_devices_text">Loading devices list…</string>
    <string name="ui_loading_device_text">Loading device…</string>
    <string name="ui_loading_widgets_text">Loading widgets…</string>

    <string name="ui_add_widget_edit_name_hint">Enter widget name</string>
    <string name="ui_add_widget_edit_pin_hint">Enter Arduino pin</string>

    <string name="ui_menu_add_widget_text">Add widget</string>
    <string name="ui_menu_add_device_text">Add device</string>
    <string name="ui_menu_about_device_text">About device</string>
    <string name="ui_menu_name_text">Name:</string>
    <string name="ui_menu_model_text">Model:</string>
    <string name="ui_menu_serial_number_text">Serial\nnumber:</string>
    <string name="ui_menu_rename_device_text">Rename</string>
    <string name="ui_menu_serial_number_hint_text">Serial number</string>
    <string name="ui_menu_device_name_hint_text">Device name</string>
    <string name="ui_menu_empty_device_sn_error_text">Serial number is empty!</string>
    <string name="ui_menu_empty_device_name_error_text">Device name is empty!</string>
    <string name="ui_menu_select_device_text">Select device</string>
    <string name="ui_menu_edit_widget_text">Edit widget</string>
    <string name="ui_menu_device_status_text">Device status</string>
    <string name="ui_menu_settings_text">Settings</string>
    <string name="ui_menu_about_text">About</string>
    <string name="ui_menu_logout_text">Log out</string>
    <string name="ui_menu_change_device_text">Change device</string>

    <string name="ui_pref_phone_number_title">GSM-device phone number</string>
    <string name="ui_pref_phone_number_default_value">Enter your phone number</string>
    <string name="ui_pref_general_settings_category">General settings</string>
    <string name="ui_pref_developer_settings_category">Developer settings</string>
    <string name="ui_pref_developer_settings_available">Developer settings available</string>
    <string name="preferenceScreen">preferenceScreen</string>
    <string name="devPreferencesCategory">devPreferencesCategory</string>

    <string name="ui_today_at_text">today at</string>
    <string name="ui_yesterday_at_text">yesterday at</string>

    <!--Messages-->
    <string name="message_no_connection_text">No internet connection!</string>
    <string name="message_no_phone_number_text">No phone number available!</string>
    <string name="message_cant_send_sms_text">No SMS application found!</string>
    <string name="message_error_phone_number_text">Error while getting phone number!</string>
    <string name="message_wrong_number_format_error_text">Wrong number format!</string>
    <string name="message_database_error_text">Database error!</string>
    <string name="message_add_edit_error_text">No empty fields allowed</string>
    <string name="message_device_not_found_text">Device not found!</string>
    <string name="message_no_widgets_found_text">No widgets found for this device!</string>
    <string name="message_add_edit_empty_name_text">Widget name can\'t be empty</string>
    <string name="message_sn_not_exist">Device does not exist!</string>
    <string name="message_device_already_has_owner">This device belongs to another user!</string>

    <!--Placeholders-->
    <string name="placeholder_widget_name_text">Widget name</string>
    <string name="placeholder_widget_pin_text">Pin</string>
    <string name="placeholder_widget_type_text">Widget type</string>
    <string name="placeholder_widget_date_text">19.11.17 16:42</string>
    <string name="placeholder_widget_value_text">36.6</string>
    <string name="placeholder_device_no_name_text">Unnamed</string>

    <!--Navigation Drawer-->
    <string name="drawer_list_item">Navigation drawer item</string>
    <string name="drawer_open">Show</string>
    <string name="drawer_close">Hide</string>

    <string-array name="widget_types_array">
        <item>Button</item>
        <item>Display</item>
        <item>Alarm sensor</item>
    </string-array>
</resources>