<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <TextView
        android:text="@string/placeholder_widget_name_text"
        style="@style/EditWidgetTextView"/>

    <EditText
        android:id="@+id/add_widget_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/ui_add_widget_edit_name_hint"
        />

    <TextView
        android:id="@+id/add_widget_pin_text_view"
        android:text="@string/placeholder_widget_pin_text"
        style="@style/EditWidgetTextView"/>

    <EditText
        android:id="@+id/add_widget_pin_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/ui_add_widget_edit_pin_hint"
        />

    <TextView
        android:id="@+id/add_widget_type_text_view"
        android:text="@string/placeholder_widget_type_text"
        style="@style/EditWidgetTextView"/>

    <Spinner
        android:id="@+id/add_widget_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">
    </Spinner>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginTop="16dp"
        >

        <Button
            android:id="@+id/add_widget_cancel_button"
            android:layout_marginRight="56dp"
            android:layout_marginEnd="56dp"
            android:text="@string/ui_cancel_text"
            style="@style/EditWidgetButton"/>

        <Button
            android:id="@+id/add_widget_ok_button"
            android:text="@string/ui_ok_text"
            style="@style/EditWidgetButton"/>

    </LinearLayout>

</LinearLayout>