<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:text="@string/ui_menu_add_device_text"
        style="@style/DialogTitleTextView"/>

    <EditText
        android:id="@+id/dialog_add_device_sn_edit_text"
        android:hint="@string/ui_menu_serial_number_hint_text"
        android:inputType="text"
        style="@style/DialogEditText"
        />

    <EditText
        android:id="@+id/dialog_add_device_name_edit_text"
        android:hint="@string/ui_menu_device_name_hint_text"
        android:inputType="text"
        style="@style/DialogEditText"
        />

    <TextView
        android:id="@+id/add_device_empty_sn_error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ui_menu_empty_device_sn_error_text"
        android:textColor="@color/colorDrawerText"
        android:fontFamily="@font/open_sans"
        android:layout_marginBottom="16dp"
        android:padding="8dp"
        android:textSize="18sp"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        >

        <Button
            android:id="@+id/add_device_cancel_button"
            android:layout_marginRight="56dp"
            android:layout_marginEnd="56dp"
            android:text="@string/ui_cancel_text"
            style="@style/EditWidgetButton"/>

        <Button
            android:id="@+id/add_device_ok_button"
            android:text="@string/ui_ok_text"
            style="@style/EditWidgetButton"/>

    </LinearLayout>

</LinearLayout>