<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:text="@string/ui_about_text"
        style="@style/DialogTitleTextView"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="24dp"
        android:src="@mipmap/ic_launcher_round"
        android:contentDescription="@string/login_logo_description"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="8dp"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/ui_version_text"
        android:fontFamily="@font/open_sans"/>

    <Button
        android:id="@+id/info_ok_button"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/ui_ok_text"
        style="@style/EditWidgetButton"/>
</LinearLayout>