<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:text="@string/ui_logout_confirmation_title"
        style="@style/DialogTitleTextView"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        >

        <Button
            android:id="@+id/logout_confirm_cancel_button"
            android:layout_marginRight="56dp"
            android:layout_marginEnd="56dp"
            android:text="@string/ui_cancel_text"
            style="@style/EditWidgetButton"/>

        <Button
            android:id="@+id/logout_confirm_ok_button"
            android:text="@string/ui_ok_text"
            style="@style/EditWidgetButton"/>

    </LinearLayout>

</LinearLayout>