<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:text="@string/ui_menu_about_device_text"
        style="@style/DialogTitleTextView"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <TextView
            android:id="@+id/about_device_name_label"
            android:text="@string/ui_menu_name_text"
            android:textColor="@color/colorPrimaryDark"
            style="@style/AboutDeviceTextView"/>
        <TextView
            android:id="@+id/about_device_name_value"
            android:textColor="@color/colorDrawerText"
            style="@style/AboutDeviceTextView"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <TextView
            android:id="@+id/about_device_model_label"
            android:text="@string/ui_menu_model_text"
            android:textColor="@color/colorPrimaryDark"
            style="@style/AboutDeviceTextView"/>
        <TextView
            android:id="@+id/about_device_model_value"
            android:textColor="@color/colorDrawerText"
            style="@style/AboutDeviceTextView"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <TextView
            android:id="@+id/about_device_sn_label"
            android:text="@string/ui_menu_serial_number_text"
            android:textColor="@color/colorPrimaryDark"
            style="@style/AboutDeviceTextView"/>
        <TextView
            android:id="@+id/about_device_sn_value"
            android:textColor="@color/colorDrawerText"
            style="@style/AboutDeviceTextView"/>
    </LinearLayout>

    <Button
        android:id="@+id/about_device_ok_button"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/ui_ok_text"
        style="@style/EditWidgetButton"/>
</LinearLayout>