<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp"
    >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">
        <TextView
            android:id="@+id/widget_item_text_view_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/placeholder_widget_name_text"
            android:textSize="24sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/widget_item_icon_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/power_on"
                android:contentDescription="@string/ui_widget_switch_icon_desc"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/widget_item_text_view_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:padding="8dp"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/placeholder_widget_value_text"
                android:textSize="48sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/widget_item_text_view_last_update_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/placeholder_widget_date_text"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
