<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/widget_text_view_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/placeholder_widget_name_text"
                android:textSize="24sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <ImageButton
                    android:id="@+id/widget_button_sms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/ui_widget_button_sms_description"
                    android:padding="8dp"
                    android:src="@drawable/ic_sms"/>

                <ImageButton
                    android:id="@+id/widget_button_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/ui_widget_button_edit_description"
                    android:padding="8dp"
                    android:src="@drawable/ic_edit"/>

                <ImageButton
                    android:id="@+id/widget_button_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/ui_widget_button_edit_description"
                    android:padding="8dp"
                    android:src="@drawable/ic_delete"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">
            <TextView
                android:id="@+id/widget_text_view_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/placeholder_widget_value_text"
                android:textSize="48sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/widget_text_view_last_update_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/placeholder_widget_date_text"
                android:textSize="14sp"/>

        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>